As discussed with Pino: make alias resolution the default in KMimeType::mimeType. There is just no good reason not to, aliases can be used anywhere, especially with shared-mime-info replacing mimetypes with aliases over time (e.g. image/ico).

This fixes at least two bugs:
1) a bug noticed by Pino: if you set the old name as filter in kfiledialog, when
   updating s-m-i it won't work anymore (because aliases are not resolved)
2) the bug that nspluginscan would define mimetypes because "unknown" when they are
   in fact aliases.
BUG: 197346
Fixed for: 4.4.2

svn path=/branches/KDE/4.4/kdelibs/; revision=1097954